ページネーション、ユーザープロフィール、カテゴリの追加など

--- a/config/locales/models.ja.yml
+++ b/config/locales/models.ja.yml
@@ -6,3 +6,7 @@ ja:
         password: パスワード
         password_confirmation: 確認用パスワード
         remember_me: 次回から自動的にログイン
+      user_profile:
+        name: 名前
+        biography: 自己紹介
+        image: 画像
